design : index.html 작성중

--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
-    
+    <header class="header">
+        <h1>ANDY</h1>
+
+        <ul class="contact">
+            <li>
+                <a href="#" target="_blank">E-mail</a>
+            </li>
+            <li>
+                <a href="#" target="_blank">Instagram</a>
+            </li>
+            <li>
+                <a href="#" target="_blank">E-mail</a>
+            </li>
+            <li>
+                <a href="#" target="_blank">E-mail</a>
+            </li>
+            <li>
+                <a href="#" target="_blank">E-mail</a>
+            </li>
+            <li>
+                <a href="#" target="_blank">E-mail</a>
+            </li>
+        </ul>
+    </header>
 </body>
+<main class="main">
+    <ul class="filter">
+        <li><a href="">전체보기</a></li>
+        <li><a href="">홀수보기</a></li>
+        <li><a href="">짝수보기</a></li>
+    </ul>
+</main>
+
 </html>
