--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>반응형 웹페이지 및 SEO적용 실습</title>
   <link rel="stylesheet" href="css/style.css" />
   <!-- isotope -->
-   <script src="js/isotope.pkgd.min.js"></script>
-  <!-- imagesLoaded  -->
-   <script src="js/imagesloaded.pkgd.min.js"></script>
+  <script src="js/isotope.pkgd.min.js"></script>
+  <!-- imagesloaded -->
+  <script src="js/imagesloaded.pkgd.min.js"></script>
   <!-- js -->
   <script src="js/script.js" defer></script>
  </head>
@@ -51,13 +51,13 @@
    </ul>
 
    <div class="card-wrap">
-    <div class="card odd typho">
+    <!-- <div class="card odd typho">
      <div class="inner">
       <img src="images/p1.jpg" alt="첫 번째 작업물" />
       <h2>첫 번째 작업물</h2>
       <p>첫 번째 작업에 대한 설명입니다.</p>
      </div>
-    </div>
+    </div> -->
    </div>
   </main>
  </body>
